[WebVR] Fix VRDisplayEvent implementation https://bugs.webkit.org/show_bug.cgi?id=187337

Reviewed by Žan Doberšek.

VRDisplayEvent implementation had two issues. First there were no attributes storing the
VRDisplay the event refers to. Secondly the VRDisplayEventReason is not mandatory so it
should be handled via an optional.

* Modules/webvr/VRDisplayEvent.cpp:
(WebCore::VRDisplayEvent::VRDisplayEvent):
(WebCore::VRDisplayEvent::display const): Deleted.
(WebCore::VRDisplayEvent::reason const): Deleted.
* Modules/webvr/VRDisplayEvent.h:

Canonical link: https://commits.webkit.org/202599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233515 268f45cc-cd09-0410-ab3c-d52691b4dbfc